dhee studios starting

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Architect Website</title>
+    <title>dhee studios</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -37,11 +37,11 @@
       </div>
       <header class="header" id="home">
         <div class="img-wrapper">
-          <img src="images/bg.jpg" />
+          <img src="images/pic1.jpg" />
         </div>
         <div class="banner">
-          <h1>Architecture & Interior Design</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <h1>dhee studios</h1>
+          <p>Concept🤝Creation</p>
           <button>Discover Now</button>
         </div>
       </header>
@@ -71,17 +71,17 @@
           </li>
         </ul>
         <div class="social-media">
-          <a href="https://github.com/KaranChandekar" target="_blank"
-            ><i class="fab fa-github"></i
+          <a href="https://www.facebook.com/profile.php?id=61562051698467" target="_blank"
+            ><i class="fab fa-facebook"></i
           ></a>
-          <a
+          <!-- <a
             href="https://www.linkedin.com/in/karan-chandekar-a87263219/"
             target="_blank"
             ><i class="fab fa-linkedin"></i
-          ></a>
-          <a href="https://twitter.com/karanchandekar1" target="_blank"
+          ></a> -->
+          <!-- <a href="https://twitter.com/karanchandekar1" target="_blank"
             ><i class="fab fa-twitter"></i
-          ></a>
+          ></a> -->
         </div>
       </section>
 
@@ -185,25 +185,24 @@
           </div>
           <div class="card" data-tilt>
             <div class="card-img-wrapper">
-              <img src="images/person-2.jpg" alt="Designer" />
+              <img src="images/poco.jpg" alt="Architect" />
             </div>
             <div class="card-info">
-              <h2>Ann Brown</h2>
-              <h3>Designer</h3>
+              <h2>Tasmeen Zaheen</h2>
+              <h3>Architect & Designer</h3>
               <p>
-                "Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Asperiores, impedit!"
+                Makes core imagination into art.
               </p>
               <button>Read More</button>
             </div>
           </div>
           <div class="card" data-tilt>
             <div class="card-img-wrapper">
-              <img src="images/person-3.jpg" alt="Architect" />
+              <img src="images/person-2.jpg" alt="Designer" />
             </div>
             <div class="card-info">
-              <h2>Mary Doe</h2>
-              <h3>Architect</h3>
+              <h2>Ann Brown</h2>
+              <h3>Designer</h3>
               <p>
                 "Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Asperiores, impedit!"
@@ -241,11 +240,11 @@
       <footer class="footer">
         <div class="footer-content">
           <p class="copyright">
-            Copyright &copy; 2022, KaranChandekar - All Rights Reserved
+            <!-- Copyright &copy; 2022, KaranChandekar - All Rights Reserved -->
           </p>
           <div class="social-list">
-            <a href="https://www.github.com/KaranChandekar" target="_blank"
-              ><i class="fab fa-github"></i
+            <a href="https://www.facebook.com/profile.php?id=61562051698467" target="_blank"
+              ><i class="fab fa-facebook"></i
             ></a>
             <a
               href="https://www.linkedin.com/in/karan-chandekar-a87263219/"
