Changed house picture.

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
           <li class="menu-item">
             <a href="#team" class="menu-link" data-content="Team">Team</a>
           </li>
-          <li class="menu-item">
+          <!-- <li class="menu-item">
             <a href="#pricing" class="menu-link" data-content="Pricing"
               >Pricing</a
             >
-          </li>
+          </li> -->
           <li class="menu-item">
             <a href="#contact" class="menu-link" data-content="Contact"
               >Contact</a
@@ -158,7 +158,7 @@
             </p>
           </div>
           <div class="about-us-img-wrapper">
-            <img src="images/house.png" />
+            <img src="images/house2.png" />
           </div>
         </div>
       </section>
